# Sugar.Lang

./: .gitignore  CMakeLists.txt  main.cpp
src/: CMakeLists.txt  compiler.cpp  compiler.h
src/Analysis/Creation/Binding/: binder_extensions.cpp  binder_extensions.h  constant_binder.cpp  constant_binder.h  global_binder.cpp  global_binder.h  local_binder.cpp  local_binder.h  project_binder.cpp  project_binder.h
src/Analysis/Creation/Transpiling/: cil_transpiler.cpp  cil_transpiler.h  expression_transpiler.cpp
src/Analysis/Structure/: source_directory.cpp  source_directory.h  source_file.cpp  source_file.h  source_object.cpp  source_object.h
src/Analysis/Structure/Compilation/: compilation_result.cpp  compilation_result.h  constant_compiler.cpp  constant_compiler.h
src/Analysis/Structure/Context/: binary_context_node.cpp  binary_context_node.h  context_node.cpp  context_node.h  invalid_context.cpp  invalid_context.h  static_reference_context.cpp  this_context.cpp  unary_context_node.cpp  unary_context_node.h
src/Analysis/Structure/Core/: built_in_function.cpp  built_in_function.h  created.cpp  created.h  default_valued.cpp  default_valued.h  describable.cpp  describable.h  generic_type.cpp  generic_type.h  nameable.cpp  nameable.h  property_signature.cpp  property_signature.h  scoped.cpp  scoped.h
src/Analysis/Structure/DataTypes/: class.cpp  class.h  data_type_extensions.cpp  data_type_extensions.h  enum.cpp  enum.h  struct.cpp  struct.h  value_type.cpp  value_type.h
src/Analysis/Structure/Enums/: describer.cpp  describer.h  member_type.h  scope_type.cpp  scope_type.h  source_type.h
src/Analysis/Structure/Global/: global_node.h
src/Analysis/Structure/Local/: local_node.h
src/Analysis/Structure/Wrappers/: built_in_data_type.cpp  built_in_data_type.h
src/Exceptions/: compile_exception.cpp  compile_exception.h  exception_manager.cpp  exception_manager.h  log_exception.cpp  log_exception.h
src/Exceptions/Compilation/Analysis/: binding_exception.cpp  binding_exception.h  invalid_describer_exception.cpp  invalid_describer_exception.h  static_binding_exception.cpp  static_binding_exception.h  type_exception.cpp  type_exception.h  variable_definition_exception.cpp  variable_definition_exception.h
src/Exceptions/Compilation/Lexing/: character_expected_exception.cpp  character_expected_exception.h  constant_out_of_range_exception.cpp  invalid_character_exception.cpp  invalid_character_exception.h
src/Exceptions/Compilation/Parsing/: empty_expression_exception.cpp  function_argument_exception.cpp  function_argument_exception.h  generic_argument_exception.cpp  generic_argument_exception.h  invalid_expression_exception.cpp  invalid_token_exception.cpp  parsing_exception.cpp  parsing_exception.h  token_expected_exception.cpp
src/Exceptions/Compiling/: source_file_exception.cpp  source_file_exception.h  transpile_file_exception.cpp  transpile_file_exception.h
src/Exceptions/Compiling/Analysis/: duplicate_variable_definition_exception.cpp  duplicate_variable_definition_exception.h  invalid_describer_exception.cpp  invalid_describer_exception.h  invalid_variable_declaration_exception.cpp  invalid_variable_declaration_exception.h  static_binding_exception.cpp  static_binding_exception.h
src/Exceptions/Compiling/Lexing/: character_expected_exception.cpp  constant_out_of_range_exception.cpp  constant_out_of_range_exception.h  invalid_character_exception.cpp  invalid_character_exception.h
src/Exceptions/Compiling/Parsing/: empty_expression_exception.cpp  empty_expression_exception.h  function_argument_exception.cpp  function_argument_exception.h  generic_argument_exception.cpp  invalid_expression_exception.cpp  invalid_expression_exception.h  invalid_token_exception.cpp  invalid_token_exception.h  parsing_exception.cpp  token_expected_exception.cpp  token_expected_exception.h
src/Lexing/Lexer/: lexer.cpp  lexer.h
src/Lexing/Tokens/: token.cpp  token.h
src/Lexing/Tokens/Enums/: keyword_type.h  operator_kind.cpp  operator_kind.h  separator_kind.cpp  separator_kind.h  syntax_kind.cpp  syntax_kind.h  token_type.cpp  token_type.h  type_kind.cpp  type_kind.h
src/Lexing/Tokens/Factories/: constant.cpp  constant.h  keyword.cpp  keyword.h  operator.cpp  operator.h  separator.cpp  separator.h
src/Parsing/ParseNodes/: invalid_node.cpp  invalid_node.h  parse_node.cpp  parse_node.h
src/Parsing/ParseNodes/Conditions/: condition_node.cpp  condition_node.h  elif_node.cpp  elif_node.h  else_node.cpp  else_node.h  if_node.cpp  if_node.h
src/Parsing/ParseNodes/Constants/: constant_node.cpp  constant_node.h
src/Parsing/ParseNodes/Core/: body_node.cpp  body_node.h  characteristic_node.cpp  characteristic_node.h  describable_node.cpp  describable_node.h  entity_node.cpp  entity_node.h  function_node.cpp  function_node.h  nameable_node.cpp  nameable_node.h  property_node.cpp  property_node.h
src/Parsing/ParseNodes/DataTypes/: class_node.cpp  class_node.h  data_type_node.cpp  data_type_node.h  enum_node.cpp  enum_node.h  struct_node.cpp  struct_node.h
src/Parsing/ParseNodes/Describers/: describer_keyword_node.cpp  describer_keyword_node.h  describer_node.cpp  describer_node.h
src/Parsing/ParseNodes/Enums/: child_code.h  node_type.h
src/Parsing/ParseNodes/Expressions/: cast_expression_node.cpp  cast_expression_node.h  dot_expression_node.cpp  dot_expression_node.h  indexer_expression_node.cpp  indexer_expression_node.h  operation_expression_node.cpp  operation_expression_node.h
src/Parsing/ParseNodes/Groups/: compound_declaration_node.cpp  compound_declaration_node.h  expression_list_node.cpp  expression_list_node.h  generic_node.cpp  generic_node.h  if_chain_node.cpp  (+7 more)
src/Parsing/Parser/: parser.cpp  parser.h  parser_data_types.cpp  parser_expressions.cpp  parser_functions.cpp  parser_general.cpp  parser_loops_conditions.cpp
src/Services/: child.cpp  child.h  collection.cpp  collection.h  destructible.cpp  destructible.h  dictionary.cpp  dictionary.h  printable.cpp  printable.h  singleton_service.cpp  singleton_service.h  string_builder.cpp  string_builder.h
(+639 files in other folders)
